--- a/staged-gg.cabal
+++ b/staged-gg.cabal
@@ -6,8 +6,17 @@ category:      Staged, Generics
 description:
   GHC.Generics style staged generics.
   .
+  See https://www.andres-loeh.de/StagedSOP/ paper for description of
+  @staged-sop@, which is staged version of @generics-sop@.
+  The non @generics-sop@ specific parts
+  like sections on Typed Template Haskell, and Type Template Haskell and Constraints,
+  are applicable to @staged-gg@ as well.
+  .
+  This package is an /EXPERIMENTAL/ proof-of-concept.
+  In a way it is unusable, because of current GHC Typed Template Haskell
+  limitations.
   See https://github.com/phadej/staged-gg/tree/master/staged-gg-examples
-  for examples.
+  for examples what you can do regardless.
 
 author:        Oleg Grenrus, Andres Löh
 maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
@@ -17,7 +26,7 @@ tested-with:   GHC ==9.0.1
 
 source-repository head
   type:     git
-  location: https://github.com/phadej/staged.git
+  location: https://github.com/phadej/staged-gg.git
 
 library
   default-language: Haskell2010
