Add Generic generics
Add functions `genericTo` and `genericFrom` that use GHC
Generics to implement the `Generic` methods.

--- a/staged-gg.cabal
+++ b/staged-gg.cabal
@@ -51,6 +51,7 @@ library
     Staged.GHC.Generics.Instances
     Staged.GHC.Generics.TH
     Staged.GHC.Generics.Types
+    Staged.GHC.Generics.GHCish
 
   other-modules:
     Generics.Deriving.TH.Internal
