--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -9,9 +9,10 @@ steps:
       style: vertical
       remove_redundant: true
   - trailing_whitespace: {}
-columns: 80
+columns: 120
 language_extensions:
   - EmptyCase
   - ExplicitForAll
   - FlexibleContexts
   - MultiParamTypeClasses
+  - TemplateHaskell
