--- a/staged-gg.cabal
+++ b/staged-gg.cabal
@@ -39,6 +39,7 @@ library
     , base              ^>=4.15
     , containers        ^>=0.6.4.1
     , template-haskell  ^>=2.17.0.0
+    , transformers
 
   build-depends:
     , generic-deriving  ^>=1.14
